# sudoku-solver-computer-vision-cnn

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  test_app.py  test_cell_clean.py
models/: 10epochs_convnet_sudoku.pkl  5epochs_convnet_sudoku.pkl  best_convnet_sudoku.pkl
results/: comprehensive_model_comparison_20250609_104753.csv  model_comparison_20250519_212812.csv  model_comparison_20250520_080541.csv  model_comparison_20250605_110940.csv
src/common/: tools.py
src/core/: train.py
src/data/: dataio.py
src/evaluate/: evaluate.py  evaluate_all_models.py
src/model/: model.py  predict.py  solver.py
src/preprocess/: build_features.py
src/scripts/: pipeline.py  train.py
